# football-memecoin

./: .env.example  .gitignore  README.md  moccasin.toml  pyproject.toml
agent/: config.py  main.py
agent/model/: token.py
agent/services/: deployer.py  gpt.py  news.py  twitter.py
script/: agent.py  deploy.py
src/: Token.vy  TokenBlueprint.vy  TokenDeployer.vy  TokenFactory.vy
src/interfaces/: IERC20Extended.vyi  IOwnable.vyi
tests/: conftest.py  test_deployer.py  test_factory.py  test_token.py
