[project]
name = "vyper-tesseract-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "moccasin==0.3.8",
    "openai>=1.60.2",
    "pynacl>=1.5.0",
    "twikit>=2.2.2",
    "web3>=7.7.0",
]
